# state-manager

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CORE_ENGINE_HANDBOOK.md  Dockerfile  Dockerfile.txt  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: Chore.yml  Docs.yml  Feat.yml  Fix.yml  Ops.yml  Ref.yml  Test.yml
.github/workflows/: cd.yml  ci-dev.yml
docs/: BE_operation.md  DIR.md  END_POINTS.md  OVERVIEW.md  QUERY_STRUCTURE.md  SCENARIO_INTEGRATION_GUIDE.md  UNUSED_SQL.md  current_task.md  design.md  graph_DB_design.md  plan.md  plan2.md  plan3.md  plan4.md
docs/plan_log/: BE_plan.md  plan.md
scripts/: api_verification.py
src/gm/state_DB/: auth.py  auth_router.py  custom.py  main.py  models.py  pipeline.py  router.py  schemas.py
src/gm/state_DB/Query/: README.md  __init__.py  query.py
src/gm/state_DB/configs/: __init__.py  api_routers.py  logging_config.py  setting.py
src/gm/state_DB/data/: state_schema.json
src/state_db/: custom.py  main.py  pipeline.py  router.py
src/state_db/Query/: __init__.py  query.py
src/state_db/configs/: __init__.py  api_routers.py  color_hint_formatter.py  exceptions.py  logging_config.py  setting.py
src/state_db/infrastructure/: __init__.py  connection.py  database.py  lifecycle.py  query_executor.py  schema.py
src/state_db/models/: __init__.py  base.py  entity.py  player.py  session.py  world.py
src/state_db/proxy/: __init__.py  client.py
src/state_db/repositories/: __init__.py  base.py  entity.py  lifecycle_state.py  player.py  progress.py  scenario.py  session.py  trace.py  world.py
src/state_db/routers/: __init__.py  dependencies.py  router_INJECT.py  router_INQUIRY.py  router_MANAGE.py  router_PROXY.py  router_START.py  router_TRACE.py  router_TRACE_phase.py  router_UPDATE.py
src/state_db/schemas/: __init__.py  auth.py  base.py  base_entities.py  enemy.py  inventory.py  item.py  management.py  management_requests.py  mixins.py  npc.py  player.py  requests.py  scenario.py  session.py  system.py  world.py
src/state_db/services/: __init__.py  state_service.py
src/state_db/trigger_concept/: trigger.sql
tests/: conftest.py  test_db_logic_full.py  test_logic_integration.py  test_main.py  test_pipeline.py  test_proxy.py  test_router.py  test_router_INJECT.py  test_router_INQUIRY.py  test_router_MANAGE.py  test_router_PROXY.py  test_router_START.py  test_router_TRACE.py  test_router_UPDATE.py  test_scenario_advanced.py  test_system_integrity.py
(+333 files in other folders)
